# wrap_exe

./: .gitignore  .pre-commit-config.yaml  Makefile  setup.cfg
test/: Makefile  print  print.cpp
wrap_exe/: __main__.py  main.py
