[metadata]
name = wrap_exe
version = 1.0.0

[options]
packages = find:
python_requires = >=3.8.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    wrap_exe = wrap_exe.__main__:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
